--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css" media="screen" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript" src="exercise1.js"></script>
+    <script type="text/javascript" src="exercise2.js"></script>
 </head>
 <body>
 
@@ -15,6 +16,18 @@
             <label>Enter CNPJ: </label>
             <input type="text" id="cnpjEx1" class="text"> 
             <input type="button" value="Validate format" class="button" onclick="validateFormat()">
+        </form>
+    </div>
+    <br>
+
+    <!-- EXERCISE 2 -->
+    <div class="exercise2">
+        <header>Exercise 2: Validate CNPJ digits
+        </header>
+        <form>
+            <label>Enter CNPJ: </label>
+            <input type="text" id="cnpjEx2"> 
+            <input type="button" value="Validate digits" class="button" onclick="validateDigits()">
         </form>
     </div>
     <br>
