--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="exercise2.js"></script>
     <script type="text/javascript" src="exercise3.js"></script>
     <script type="text/javascript" src="exercise5.js"></script>
+    <script type="text/javascript" src="exercise6.js"></script>
 </head>
 <body>
 
@@ -82,6 +83,17 @@
             <hr>
             <label><b>DONE</b></label>
             <div class="done" id="done"></div>
+        </form>
+    </div>
+    <br>
+
+    <!-- EXERCISE 6 -->
+    <div>
+        <header>Exercise 6: Rest Client - World Clock</header>
+        <form class="restClient">
+            <label>Click button "Display" to show date/time hour in local and UTC Timezones: </label>
+            <input type="button" class="button" value="Display" onclick="restClient()">
+            <br><br>
         </form>
     </div>
     <br>
