--- a/index.html
+++ b/index.html
@@ -98,5 +98,12 @@
     </div>
     <br>
 
+    <!-- EXERCISE 7 -->
+    <div>
+        <header>Exercise 7: Rest Server - World Clock</header>
+        <p>To see exercise 7 implementation go to localhost on port 8080 </p>
+    </div>
+    <br>
+
 </body>
 </html>
