--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Exercises</title>
     <link rel="stylesheet" type="text/css" href="styles.css" media="screen" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!-- API to show trash icon on exercise 5  -->
     <script type="text/javascript" src="exercise1.js"></script>
     <script type="text/javascript" src="exercise2.js"></script>
     <script type="text/javascript" src="exercise3.js"></script>
